# mdview

./: .gitignore  HANDOFF.md  README.md  idea.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-07-10-pdf-export-refresh-hardening.md  2026-07-10-project-mode-file-tree.md  2026-07-23-bpmn-tree-external-open.md
docs/superpowers/specs/: 2026-07-10-pdf-export-refresh-hardening-design.md  2026-07-10-project-mode-file-tree-design.md  2026-07-23-bpmn-viewer-design.md  2026-07-24-folder-history-design.md
scripts/: bump-version.mjs
src/: editor.ts  main.ts  render.ts  styles.css  theme.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/fixtures/: sample.md
