[package]
name = "mdview"
version = "0.1.15"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mdview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify-debouncer-full = "0.7.0"
url = "2.5.8"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-clipboard-manager = "2"

# Windows/Linux: route a second launch (double-clicking another .md) into the
# running process instead of spawning a new instance. macOS already does this
# natively via RunEvent::Opened, so the plugin is excluded there.
[target.'cfg(not(target_os = "macos"))'.dependencies]
tauri-plugin-single-instance = "2"

# PDF export drives the platform webview's native print-to-PDF directly (wry
# does not expose one). Versions MUST track what wry itself uses, or the raw
# pointer casts in export_pdf break.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKPDFConfiguration", "block2"] }
block2 = "0.6"
lopdf = "0.36"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows = "0.61"

[dev-dependencies]
tempfile = "3"

